tests/parsing/smtlib/mcil/errors/275_declare-enum-sort_bad_value.mcil
(declare-enum-sort e (c1 _))